// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserOptions should not render the component when speaker details are not present 1`] = `<DocumentFragment />`;

exports[`UserOptions should render the component when speaker details are present 1`] = `
<DocumentFragment>
  <div
    class="root position-relative dropdown"
    data-testid="UserOptions"
    id="userOptions"
  >
    <button
      aria-expanded="false"
      class="toggle d-flex h-100 justify-content-center align-items-center px-3 dropdown-toggle btn btn-light"
      id="userOptions"
      type="button"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          alt="Language Icon"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </div>
      <span
        class="d-none d-xl-block mx-1"
      >
        abcd
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`UserOptions should render the component when speaker details are present but username is not present 1`] = `
<DocumentFragment>
  <div
    class="root position-relative dropdown"
    data-testid="UserOptions"
    id="userOptions"
  >
    <button
      aria-expanded="false"
      class="toggle d-flex h-100 justify-content-center align-items-center px-3 dropdown-toggle btn btn-light"
      id="userOptions"
      type="button"
    >
      <div
        style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
      >
        <div
          style="box-sizing: border-box; display: block; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
            style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
          />
        </div>
        <img
          alt="Language Icon"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </div>
    </button>
  </div>
</DocumentFragment>
`;
